--- a/reminder/package.json
+++ b/reminder/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "express-session": "^1.18.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
